# FHEOracle

./: CMakeCache.txt  CMakeLists.txt  FHsha256.cpp  FHsha256.h  Makefile  README.md  SHA256.h  client  client.cpp  client_step1.cpp  client_step2.cpp  cmake_install.cmake  context.json  holder.cpp  holder.h  pk.json  server  server.cpp  server_step1.cpp  server_step2.cpp  sha1_test.cpp  test.cpp  test1.cpp  tfhe.sh
client_folder/: client_step2.cpp  client_step2.h  client_step2_circuit.cpp  client_step2_circuit.h
common/: sha1_circuit.cpp  sha1_circuit.h
helibtest/: CMakeLists.txt  Makefile  README.md  test.cpp
server_folder/: server_step2_circuit.cpp  server_step2_circuit.h  sha1_circuit.cpp  sha1_circuit.h
sha256/: CMakeLists.txt  Makefile  README  main.cpp
step1/: CMakeLists.txt  Makefile  client.cpp  server.cpp
