cmake_minimum_required(VERSION 3.12)
project(ABY LANGUAGES CXX)
find_package(ABY QUIET)
find_package(ENCRYPTO_utils QUIET)
if(ABY_FOUND)
    message(STATUS "Found ABY")
elseif (NOT ABY_FOUND AND NOT TARGET ABY::aby)
    message("ABY was not found: add ABY subdirectory")
    add_subdirectory(ABY)
endif()

add_executable(client_step2 client_step2.cpp client_folder/client_step2_circuit.cpp)
add_executable(server_step2 server_step2.cpp server_folder/server_step2_circuit.cpp)

add_executable(client_step1 client_step1.cpp)
add_executable(server_step1 server_step1.cpp)
target_link_libraries(client_step1 -ltfhe-spqlios-fma)
target_link_libraries(server_step1 -ltfhe-spqlios-fma)

target_link_libraries(client_step2 -ltfhe-spqlios-fma ABY::aby ENCRYPTO_utils::encrypto_utils)
target_link_libraries(server_step2 ABY::aby ENCRYPTO_utils::encrypto_utils)
